Update code style, and add todo()'s