@@ -1,18 +1,18 @@
 /**
  * MIT License
- *
+ * <p>
  * Copyright (c) 2019-2021 Matt
- *
+ * <p>
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- *
+ * <p>
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
+ * <p>
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -29,7 +29,6 @@ import dev.triumphteam.cmd.core.message.context.InvalidArgumentContext;
 import dev.triumphteam.cmd.core.suggestion.Suggestion;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -43,7 +42,7 @@ import java.util.stream.Stream;
 /**
  * Splitting argument takes a string and splits it into a collection.
  *
- * @param <S> The sender type.
+ * @param <S> the sender type.
  */
 public final class SplitStringInternalArgument<S> extends StringInternalArgument<S> {
 
@@ -62,6 +61,7 @@ public final class SplitStringInternalArgument<S> extends StringInternalArgument
             final boolean optional
     ) {
         super(meta, name, description, String.class, suggestion, optional);
+
         this.regex = regex;
         this.internalArgument = internalArgument;
         this.collectionType = collectionType;
@@ -70,9 +70,9 @@ public final class SplitStringInternalArgument<S> extends StringInternalArgument
     /**
      * Takes a string and splits it into a collection.
      *
-     * @param sender The sender to resolve to.
-     * @param value  The argument value.
-     * @return A collection of the split strings.
+     * @param sender the sender to resolve to.
+     * @param value the argument value.
+     * @return a collection of the split strings.
      */
     @Override
     public @NotNull Result<@Nullable Object, BiFunction<@NotNull CommandMeta, @NotNull String, @NotNull InvalidArgumentContext>> resolve(
@@ -80,8 +80,10 @@ public final class SplitStringInternalArgument<S> extends StringInternalArgument
             final @NotNull String value,
             final @Nullable Object provided
     ) {
-        final Stream<Object> stream = Arrays.stream(value.split(regex)).map(arg -> internalArgument.resolve(sender, arg));
-        if (collectionType == Set.class) return success(stream.collect(Collectors.toSet()));
+        final Stream<Object> stream = Arrays.stream(value.split(regex)).map(arg -> this.internalArgument.resolve(sender, arg));
+
+        if (this.collectionType == Set.class) return success(stream.collect(Collectors.toSet()));
+
         return success(stream.collect(Collectors.toList()));
     }
 
@@ -93,12 +95,13 @@ public final class SplitStringInternalArgument<S> extends StringInternalArgument
         final String peek = arguments.peekLast();
         final String last = peek == null ? "" : peek;
 
-        final List<String> split = Arrays.asList(last.split(regex));
-        if (split.size() == 0) return Collections.emptyList();
+        final List<String> split = Arrays.asList(last.split(this.regex));
 
-        final String current = last.endsWith(regex) ? "" : split.get(split.size() - 1);
-        final String joined = String.join(regex, current.isEmpty() ? split : split.subList(0, split.size() - 1));
-        final String map = joined.isEmpty() ? "" : joined + regex;
+        if (split.isEmpty()) return Collections.emptyList();
+
+        final String current = last.endsWith(this.regex) ? "" : split.getLast();
+        final String joined = String.join(this.regex, current.isEmpty() ? split : split.subList(0, split.size() - 1));
+        final String map = joined.isEmpty() ? "" : joined + this.regex;
 
         return getSuggestion()
                 .getSuggestions(sender, current, new ArrayList<>(arguments))
