@@ -1,18 +1,18 @@
 /**
  * MIT License
- *
+ * <p>
  * Copyright (c) 2019-2021 Matt
- *
+ * <p>
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- *
+ * <p>
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
+ * <p>
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -25,13 +25,11 @@ package dev.triumphteam.cmd.core.argument.keyed;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Basically a holder that contains all the needed arguments for the command.
@@ -45,22 +43,22 @@ final class NamedGroup implements ArgumentGroup<Argument> {
     }
 
     public void addArgument(final @NotNull Argument argument) {
-        arguments.put(argument.getName(), argument);
+        this.arguments.put(argument.getName(), argument);
     }
 
     @Override
     public @NotNull Set<String> getAllNames() {
-        return arguments.keySet();
+        return this.arguments.keySet();
     }
 
     @Override
     public boolean isEmpty() {
-        return arguments.isEmpty();
+        return this.arguments.isEmpty();
     }
 
     @Override
     public @Nullable Argument matchExact(final @NotNull String token) {
-        return arguments.get(token);
+        return this.arguments.get(token);
     }
 
     @Override
@@ -69,15 +67,15 @@ final class NamedGroup implements ArgumentGroup<Argument> {
                 .stream()
                 .filter(it -> it.getKey().startsWith(token))
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
         if (arguments.size() != 1) return null;
 
-        return arguments.get(0);
+        return arguments.getFirst();
     }
 
     @Override
     public @NotNull Set<Argument> getAll() {
-        return new HashSet<>(arguments.values());
+        return new HashSet<>(this.arguments.values());
     }
 }
